--- a/deployment/amazonconnect.yaml
+++ b/deployment/amazonconnect.yaml
@@ -14,7 +14,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 #   10. IAM role for lambda
 #   11. 2 Lambda functions
 #################################################################################################
-Description: The template will create the resources needed for the amazon connect
+Description: The template will create the resources needed for the amazon connect (SO9148)
 
 #####################################################
 # Runtime 
